tests/snapshots/svg_snapshots__radar.snap
---
source: tests/svg_snapshots.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="1200" height="900" viewBox="0 0 1200 900">
<rect x="0" y="0" width="1200" height="900" fill="white"/>
<defs>
  <clipPath id="cp0"><rect x="112.00" y="125.00" width="760.00" height="760.00"/></clipPath>
  <clipPath id="cp1"><rect x="985.00" y="125.00" width="200.00" height="760.00"/></clipPath>
</defs>
<g clip-path="url(#cp0)">
  <polyline points="644.46,295.16 599.05,539.78 492.00,813.32 478.04,509.54 368.31,334.75 644.46,295.16" stroke="rgba(215,66,66,1.0000)" stroke-width="3.00" fill="none" stroke-linejoin="miter"/>
  <polyline points="586.93,374.34 785.23,600.28 492.00,519.68 245.32,585.15 454.60,453.53 586.93,374.34" stroke="rgba(66,215,215,1.0000)" stroke-width="3.00" fill="none" stroke-linejoin="miter"/>
  <polyline points="653.50,505.00 652.72,489.17 650.40,473.49 646.55,458.12 641.21,443.20 634.43,428.87 626.28,415.28 616.84,402.55 606.20,390.80 594.45,380.16 581.72,370.72 568.13,362.57 553.80,355.79 538.88,350.45 523.51,346.60 507.83,344.28 492.00,343.50 476.17,344.28 460.49,346.60 445.12,350.45 430.20,355.79 415.87,362.57 402.28,370.72 389.55,380.16 377.80,390.80 367.16,402.55 357.72,415.28 349.57,428.87 342.79,443.20 337.45,458.12 333.60,473.49 331.28,489.17 330.50,505.00 331.28,520.83 333.60,536.51 337.45,551.88 342.79,566.80 349.57,581.13 357.72,594.72 367.16,607.45 377.80,619.20 389.55,629.84 402.28,639.28 415.87,647.43 430.20,654.21 445.12,659.55 460.49,663.40 476.17,665.72 492.00,666.50 507.83,665.72 523.51,663.40 538.88,659.55 553.80,654.21 568.13,647.43 581.72,639.28 594.45,629.84 606.20,619.20 616.84,607.45 626.28,594.72 634.43,581.13 641.21,566.80 646.55,551.88 650.40,536.51 652.72,520.83 653.50,505.00" stroke="rgba(217,217,217,1.0000)" stroke-width="1.00" fill="none" stroke-linejoin="miter"/>
  <polyline points="506.68,505.00 506.61,503.56 506.40,502.14 506.05,500.74 505.56,499.38 504.95,498.08 504.21,496.84 503.35,495.69 502.38,494.62 501.31,493.65 500.16,492.79 498.92,492.05 497.62,491.44 496.26,490.95 494.86,490.60 493.44,490.39 492.00,490.32 490.56,490.39 489.14,490.60 487.74,490.95 486.38,491.44 485.08,492.05 483.84,492.79 482.69,493.65 481.62,494.62 480.65,495.69 479.79,496.84 479.05,498.08 478.44,499.38 477.95,500.74 477.60,502.14 477.39,503.56 477.32,505.00 477.39,506.44 477.60,507.86 477.95,509.26 478.44,510.62 479.05,511.92 479.79,513.16 480.65,514.31 481.62,515.38 482.69,516.35 483.84,517.21 485.08,517.95 486.38,518.56 487.74,519.05 489.14,519.40 490.56,519.61 492.00,519.68 493.44,519.61 494.86,519.40 496.26,519.05 497.62,518.56 498.92,517.95 500.16,517.21 501.31,516.35 502.38,515.38 503.35,514.31 504.21,513.16 504.95,511.92 505.56,510.62 506.05,509.26 506.40,507.86 506.61,506.44 506.68,505.00" stroke="rgba(217,217,217,1.0000)" stroke-width="1.00" fill="none" stroke-linejoin="miter"/>
  <polyline points="604.56,505.00 604.02,493.97 602.40,483.04 599.71,472.33 595.99,461.92 591.27,451.94 585.59,442.46 579.01,433.59 571.59,425.41 563.41,417.99 554.54,411.41 545.06,405.73 535.08,401.01 524.67,397.29 513.96,394.60 503.03,392.98 492.00,392.44 480.97,392.98 470.04,394.60 459.33,397.29 448.92,401.01 438.94,405.73 429.46,411.41 420.59,417.99 412.41,425.41 404.99,433.59 398.41,442.46 392.73,451.94 388.01,461.92 384.29,472.33 381.60,483.04 379.98,493.97 379.44,505.00 379.98,516.03 381.60,526.96 384.29,537.67 388.01,548.08 392.73,558.06 398.41,567.54 404.99,576.41 412.41,584.59 420.59,592.01 429.46,598.59 438.94,604.27 448.92,608.99 459.33,612.71 470.04,615.40 480.97,617.02 492.00,617.56 503.03,617.02 513.96,615.40 524.67,612.71 535.08,608.99 545.06,604.27 554.54,598.59 563.41,592.01 571.59,584.59 579.01,576.41 585.59,567.54 591.27,558.06 595.99,548.08 599.71,537.67 602.40,526.96 604.02,516.03 604.56,505.00" stroke="rgba(217,217,217,1.0000)" stroke-width="1.00" fill="none" stroke-linejoin="miter"/>
  <polyline points="702.44,505.00 701.43,484.37 698.40,463.95 693.38,443.91 686.42,424.47 677.59,405.80 666.97,388.09 654.67,371.50 640.80,356.20 625.50,342.33 608.91,330.03 591.20,319.41 572.53,310.58 553.09,303.62 533.05,298.60 512.63,295.57 492.00,294.56 471.37,295.57 450.95,298.60 430.91,303.62 411.47,310.58 392.80,319.41 375.09,330.03 358.50,342.33 343.20,356.20 329.33,371.50 317.03,388.09 306.41,405.80 297.58,424.47 290.62,443.91 285.60,463.95 282.57,484.37 281.56,505.00 282.57,525.63 285.60,546.05 290.62,566.09 297.58,585.53 306.41,604.20 317.03,621.91 329.33,638.50 343.20,653.80 358.50,667.67 375.09,679.97 392.80,690.59 411.47,699.42 430.91,706.38 450.95,711.40 471.37,714.43 492.00,715.44 512.63,714.43 533.05,711.40 553.09,706.38 572.53,699.42 591.20,690.59 608.91,679.97 625.50,667.67 640.80,653.80 654.67,638.50 666.97,621.91 677.59,604.20 686.42,585.53 693.38,566.09 698.40,546.05 701.43,525.63 702.44,505.00" stroke="rgba(217,217,217,1.0000)" stroke-width="1.00" fill="none" stroke-linejoin="miter"/>
  <polyline points="800.32,505.00 798.83,474.78 794.39,444.85 787.04,415.50 776.85,387.01 763.91,359.66 748.36,333.71 730.33,309.40 710.01,286.99 687.59,266.67 663.29,248.64 637.34,233.09 609.99,220.15 581.50,209.96 552.15,202.61 522.22,198.17 492.00,196.68 461.78,198.17 431.85,202.61 402.50,209.96 374.01,220.15 346.66,233.09 320.71,248.64 296.40,266.67 273.99,286.99 253.67,309.40 235.64,333.71 220.09,359.66 207.15,387.01 196.96,415.50 189.61,444.85 185.17,474.78 183.68,505.00 185.17,535.22 189.61,565.15 196.96,594.50 207.15,622.99 220.09,650.34 235.64,676.29 253.67,700.60 273.99,723.01 296.40,743.33 320.71,761.36 346.66,776.91 374.01,789.85 402.50,800.04 431.85,807.39 461.78,811.83 492.00,813.32 522.22,811.83 552.15,807.39 581.50,800.04 609.99,789.85 637.34,776.91 663.29,761.36 687.60,743.33 710.01,723.01 730.33,700.59 748.36,676.29 763.91,650.34 776.85,622.99 787.04,594.50 794.39,565.15 798.83,535.22 800.32,505.00" stroke="rgba(217,217,217,1.0000)" stroke-width="1.00" fill="none" stroke-linejoin="miter"/>
  <polyline points="815.00,505.00 813.44,473.34 808.79,441.99 801.09,411.24 790.41,381.39 776.86,352.74 760.56,325.55 741.68,300.09 720.40,276.60 696.91,255.32 671.45,236.44 644.26,220.14 615.61,206.59 585.76,195.91 555.01,188.21 523.66,183.56 492.00,182.00 460.34,183.56 428.99,188.21 398.24,195.91 368.39,206.59 339.74,220.14 312.55,236.44 287.09,255.32 263.60,276.60 242.32,300.09 223.44,325.55 207.14,352.74 193.59,381.39 182.91,411.24 175.21,441.99 170.56,473.34 169.00,505.00 170.56,536.66 175.21,568.01 182.91,598.76 193.59,628.61 207.14,657.26 223.44,684.45 242.32,709.91 263.60,733.40 287.09,754.68 312.55,773.56 339.74,789.86 368.39,803.41 398.24,814.09 428.99,821.79 460.34,826.44 492.00,828.00 523.66,826.44 555.01,821.79 585.76,814.09 615.61,803.41 644.26,789.86 671.45,773.56 696.91,754.68 720.40,733.40 741.68,709.91 760.56,684.45 776.86,657.26 790.41,628.61 801.09,598.76 808.79,568.01 813.44,536.66 815.00,505.00" stroke="rgba(217,217,217,1.0000)" stroke-width="1.00" fill="none" stroke-linejoin="miter"/>
  <polyline points="492.00,505.00 492.00,828.00" stroke="rgba(217,217,217,1.0000)" stroke-width="1.00" fill="none" stroke-linejoin="miter"/>
  <polyline points="492.00,505.00 681.85,243.69" stroke="rgba(217,217,217,1.0000)" stroke-width="1.00" fill="none" stroke-linejoin="miter"/>
  <text x="704.19" y="212.94" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="central" fill="#000000" fill-opacity="1.000">Speed</text>
  <polyline points="492.00,505.00 799.19,604.81" stroke="rgba(217,217,217,1.0000)" stroke-width="1.00" fill="none" stroke-linejoin="miter"/>
  <text x="835.33" y="616.56" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="central" fill="#000000" fill-opacity="1.000">Strength</text>
  <polyline points="492.00,505.00 492.00,828.00" stroke="rgba(217,217,217,1.0000)" stroke-width="1.00" fill="none" stroke-linejoin="miter"/>
  <text x="492.00" y="866.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="central" fill="#000000" fill-opacity="1.000">Defense</text>
  <polyline points="492.00,505.00 184.81,604.81" stroke="rgba(217,217,217,1.0000)" stroke-width="1.00" fill="none" stroke-linejoin="miter"/>
  <text x="148.67" y="616.56" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="central" fill="#000000" fill-opacity="1.000">Magic</text>
  <polyline points="492.00,505.00 302.15,243.69" stroke="rgba(217,217,217,1.0000)" stroke-width="1.00" fill="none" stroke-linejoin="miter"/>
  <text x="279.81" y="212.94" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="central" fill="#000000" fill-opacity="1.000">Agility</text>
</g>
<g clip-path="url(#cp1)">
  <rect x="998.00" y="232.00" width="14.00" height="14.00" fill="rgba(215,66,66,1.0000)"/>
  <text x="1029.00" y="239.00" font-size="32" font-family="sans-serif" text-anchor="start" dominant-baseline="central" fill="#000000" fill-opacity="1.000">Alice</text>
  <rect x="998.00" y="300.40" width="14.00" height="14.00" fill="rgba(66,215,215,1.0000)"/>
  <text x="1029.00" y="307.40" font-size="32" font-family="sans-serif" text-anchor="start" dominant-baseline="central" fill="#000000" fill-opacity="1.000">Bob</text>
</g>
</svg>
