tests/snapshots/svg_snapshots__scatter_color.snap
---
source: tests/svg_snapshots.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="1200" height="900" viewBox="0 0 1200 900">
<rect x="0" y="0" width="1200" height="900" fill="white"/>
<defs>
  <clipPath id="cp0"><rect x="95.00" y="15.00" width="874.00" height="820.00"/></clipPath>
  <clipPath id="cp1"><rect x="985.00" y="15.00" width="200.00" height="820.00"/></clipPath>
  <clipPath id="cp2"><rect x="71.00" y="835.00" width="922.00" height="50.00"/></clipPath>
  <clipPath id="cp3"><rect x="-9.00" y="3.00" width="104.00" height="844.00"/></clipPath>
</defs>
<g clip-path="url(#cp0)">
  <circle cx="234.05" cy="797.73" r="8.00" fill="rgba(215,66,66,1.0000)"/>
  <circle cx="432.68" cy="425.00" r="8.00" fill="rgba(66,215,66,1.0000)"/>
  <circle cx="631.32" cy="673.48" r="8.00" fill="rgba(215,66,66,1.0000)"/>
  <circle cx="829.95" cy="52.27" r="8.00" fill="rgba(66,66,215,1.0000)"/>
  <circle cx="333.36" cy="300.76" r="8.00" fill="rgba(66,215,66,1.0000)"/>
  <circle cx="730.64" cy="549.24" r="8.00" fill="rgba(66,66,215,1.0000)"/>
</g>
<g clip-path="url(#cp1)">
  <rect x="998.00" y="131.00" width="14.00" height="14.00" fill="rgba(215,66,66,1.0000)"/>
  <text x="1029.00" y="138.00" font-size="32" font-family="sans-serif" text-anchor="start" dominant-baseline="central" fill="#000000" fill-opacity="1.000">setosa</text>
  <rect x="998.00" y="204.80" width="14.00" height="14.00" fill="rgba(66,215,66,1.0000)"/>
  <text x="1029.00" y="211.80" font-size="32" font-family="sans-serif" text-anchor="start" dominant-baseline="central" fill="#000000" fill-opacity="1.000">versicolor</text>
  <rect x="998.00" y="278.60" width="14.00" height="14.00" fill="rgba(66,66,215,1.0000)"/>
  <text x="1029.00" y="285.60" font-size="32" font-family="sans-serif" text-anchor="start" dominant-baseline="central" fill="#000000" fill-opacity="1.000">virginica</text>
</g>
<g clip-path="url(#cp2)">
  <rect x="95.00" y="834.50" width="874.00" height="1.00" fill="rgba(179,179,179,1.0000)"/>
  <rect x="134.23" y="832.00" width="1.00" height="6.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="134.73" y="840.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">0</text>
  <rect x="332.86" y="832.00" width="1.00" height="6.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="333.36" y="840.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">2</text>
  <rect x="531.50" y="832.00" width="1.00" height="6.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="532.00" y="840.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">4</text>
  <rect x="730.14" y="832.00" width="1.00" height="6.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="730.64" y="840.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">6</text>
  <rect x="928.77" y="832.00" width="1.00" height="6.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="929.27" y="840.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">8</text>
  <text x="532.00" y="860.00" font-size="36" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">
    <tspan x="532.00" dy="0.0">x</tspan>
  </text>
</g>
<g clip-path="url(#cp3)">
  <rect x="94.50" y="15.00" width="1.00" height="820.00" fill="rgba(179,179,179,1.0000)"/>
  <rect x="92.00" y="797.23" width="6.00" height="1.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="83.00" y="797.73" font-size="24" font-family="sans-serif" text-anchor="end" dominant-baseline="central" fill="#000000" fill-opacity="1.000">2</text>
  <rect x="92.00" y="548.74" width="6.00" height="1.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="83.00" y="549.24" font-size="24" font-family="sans-serif" text-anchor="end" dominant-baseline="central" fill="#000000" fill-opacity="1.000">4</text>
  <rect x="92.00" y="300.26" width="6.00" height="1.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="83.00" y="300.76" font-size="24" font-family="sans-serif" text-anchor="end" dominant-baseline="central" fill="#000000" fill-opacity="1.000">6</text>
  <rect x="92.00" y="51.77" width="6.00" height="1.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="83.00" y="52.27" font-size="24" font-family="sans-serif" text-anchor="end" dominant-baseline="central" fill="#000000" fill-opacity="1.000">8</text>
  <text x="35.00" y="425.00" font-size="36" font-family="sans-serif" text-anchor="middle" dominant-baseline="central" fill="#000000" fill-opacity="1.000" transform="rotate(-90,35.00,425.00)">y</text>
</g>
</svg>
